# loophole

./: .dockerignore  .env  .gitignore  .gitmodules  .golangci.yml  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  Dockerfile  Dockerfile.test  Dockerfile.vm  LICENSE  Makefile  README.md  backpressure_panic_test.go  backpressure_test.go  block_cache.go  cache_stale_test.go  clone_darwin.go  clone_linux.go  concurrent_test.go  config.go  config_test.go  coverage.html  coverage.out  deps.sh  design.md  device.go  device_darwin.go  device_linux.go  dir.go  docker-compose.yml  docker-loophole.toml  download-deps.sh  download.go  file_store.go  file_store_test.go  flusher.go  fly.test.toml  go.mod  (+39 more)
.cargo/: config.toml
.claude/: settings.local.json
.config/: nextest.toml
apiserver/: backend_darwin.go  backend_linux.go  checkpoint.go  clone.go  dd_test.go  device_clone.go  device_dd.go  embed.go  freeze.go  logging.go  owner.go  server.go  status.go  tune_darwin.go  tune_linux.go  volcmd.go  (+1 more)
old/: Cargo.toml  Dockerfile  Makefile  docker-compose.yml  sqlx-macros.db
old/plans/: original_design.md
old/src/: cache.rs  cache_repo.rs  ctl.rs  fs.rs  inode.rs  lib.rs  main.rs  metrics.rs  names.rs  s3.rs  store.rs  store_tests.rs  test_helpers.rs  uploader.rs  volume_manager.rs  volume_manager_tests.rs
old/tests/: conftest.py  helpers.py  local-falloc-0-verify.state  local-randrw-0-verify.state  local-randrw-1-verify.state  local-seqwrite-0-verify.state  pyproject.toml  test_clone.py  test_ext4.py  test_fallocate.py  test_high_level.py  test_snapshot.py  test_store.py
(+828 files in other folders)
