[package]
name = "loophole"
version = "0.1.0"
edition = "2024"

[features]
default = ["block-fuse"]
block-fuse = ["dep:fuser"]

[[bin]]
name = "loophole"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
aws-config = "1.8.13"
aws-sdk-s3 = "1.122.0"
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6.1.0"
fuser = { version = "0.17.0", optional = true }
libc = "0.2.182"
lru = "0.16.3"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.25.0"
tokio = { version = "1.49.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio-rustls", "macros"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
async-trait = "0.1.89"
uuid = { version = "1.21.0", features = ["v4"] }
arc-swap = "1.8.2"
chrono = { version = "0.4.43", default-features = false, features = ["clock"] }
